--- a/static/scss/_profile-full.scss
+++ b/static/scss/_profile-full.scss
@@ -1,6 +1,7 @@
 .b-profile-header {
     .banner {
-        float: top;
+        display: flex;
+        align-items: center;
         width: 100vw;
         height: 60vh;
         overflow: hidden;
