User name now case insensitive to back end

--- a/static/css/gabr.css
+++ b/static/css/gabr.css
@@ -299,6 +299,12 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
 
+.icon-report:before {
+  content: "\f024"; }
+
+.icon-block:before {
+  content: "\f05e"; }
+
 .icon-user:before {
   content: "\f007"; }
 
