--- a/static/templates/card-profile-small.html
+++ b/static/templates/card-profile-small.html
@@ -5,18 +5,18 @@
         <img class="image" src="{{ card_user.banner.url }}" />
     </div>
     <div>
-        <a id="card-profile-small-{{ card_user.user.username }}" href="{% url "profile" user_name=card_user.user.username %}">
+        <a id="card-profile-small-{{ card_user.user_name }}" href="{% url "profile" user_name=card_user.user_name %}">
             <div class="avatar">
                 <img class="image" src="{{ card_user.avatar.url }}" />
             </div>
             <span class="display-name">{{ card_user.display_name }}</span><br>
-            <span class="username">{{ card_user.user.username }}</span>
+            <span class="username">{{ card_user.user_name }}</span>
         </a>
 
         <div class="bio">{{ card_user.bio }}</div>
 
         <div class="stats">
-            <a href="{% url "profile" user_name=card_user.user.username %}">
+            <a href="{% url "profile" user_name=card_user.user_name %}">
                 <div class="label">
                     posts<br>
                     <span class="value">
@@ -24,7 +24,7 @@
                     </span>
                 </div>
             </a>
-            <a href="{% url "profile_following" user_name=card_user.user.username %}">
+            <a href="{% url "profile_following" user_name=card_user.user_name %}">
                 <div class="label">
                     following<br>
                     <span class="value">
@@ -32,7 +32,7 @@
                     </span>
                 </div>
             </a>
-            <a href="{% url "profile_followers" user_name=card_user.user.username %}">
+            <a href="{% url "profile_followers" user_name=card_user.user_name %}">
                 <div class="label">
                     followers<br>
                     <span class="value">
