--- a/static/templates/profile-base.html
+++ b/static/templates/profile-base.html
@@ -13,6 +13,28 @@
             <img class="image" src="{{ target_user.banner.url }}">
         </div>
         <div class="navbar">
+        <!-- User dropdown -->
+            <div class="item right">
+                <div class="dropdown">
+                    <a href="#" data-toggle="dropdown">
+                        <div style="width: 2rem; height: 2rem; margin: 1rem;">
+                        <span class="icon icon-settings"></span>
+
+                        </div>
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right fade-in">
+                        <a class="dropdown-item" href="{% url "profile" user_name=user.username %}">
+                            <span class="icon icon-block"></span>
+                            Block
+                        </a>
+                        <a class="dropdown-item" href="{% url "profile_lists" user_name=user.username %}">
+                            <span class="icon icon-report"></span>
+                            Report
+                        </a>
+                    </div>
+                </div>
+            </div>
+
             {% if current_user != target_user and user.is_authenticated %}
                 <div class="item right">
                     <button id="follow-{{ target_user.user.username }}"
@@ -81,7 +103,7 @@
                     </div>
                     <div class="info">
                         <div class="display-name">{{ target_user.display_name }}</div>
-                        <div class="username">{{ target_user.user.username }}</div>
+                        <div class="username">{{ target_user.user_name }}</div>
                         <div class="bio">{{ target_user.bio }}</div>
                     </div>
                 </div>
