--- a/static/css/gabr.css
+++ b/static/css/gabr.css
@@ -490,6 +490,14 @@ body {
         background-color: darkred !important; }
         .b-profile-header .navbar .item .follow-button-true:hover::before {
           content: 'Unfollow'; }
+    .b-profile-header .navbar .item .more-options-button {
+      width: 2rem;
+      height: 2rem;
+      margin: 0.75rem;
+      display: flex;
+      border: none;
+      background-color: transparent;
+      text-align: center; }
     .b-profile-header .navbar .item .link {
       font-size: 1rem;
       text-decoration: none !important;
