--- a/static/scss/_profile-full.scss
+++ b/static/scss/_profile-full.scss
@@ -64,6 +64,16 @@
                 }
             }
 
+            .more-options-button {
+                width:2rem;
+                height: 2rem;
+                margin: 0.75rem;
+                display: flex;
+                border: none;
+                background-color: transparent;
+                text-align: center;
+            }
+
             .link {
                 font-size: 1rem;
                 text-decoration: none !important;
