--- a/static/templates/profile-base.html
+++ b/static/templates/profile-base.html
@@ -13,33 +13,29 @@
             <img class="image" src="{{ target_user.banner.url }}">
         </div>
         <div class="navbar">
-        <!-- User dropdown -->
-            <div class="item right">
-                <div class="dropdown">
-                    <a href="#" data-toggle="dropdown">
-                        <div style="width: 2rem; height: 2rem; margin: 1rem;">
-                        <span class="icon icon-settings"></span>
-
+            {% if current_user != target_user and user.is_authenticated %}
+                <div class="item right">
+                    <div class="dropdown">
+                        <button class="more-options-button" data-toggle="dropdown">
+                            <span class="icon icon-settings"></span>
+                        </button>
+                        <div class="dropdown-menu dropdown-menu-right fade-in">
+                            <a class="dropdown-item" onclick="block({{ target_user.username }})">
+                                <span class="icon icon-block"></span>
+                                Block
+                            </a>
+                            <a class="dropdown-item" href="{% url "profile_lists" user_name=user.username %}">
+                                <span class="icon icon-report"></span>
+                                Report
+                            </a>
                         </div>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-right fade-in">
-                        <a class="dropdown-item" href="{% url "profile" user_name=user.username %}">
-                            <span class="icon icon-block"></span>
-                            Block
-                        </a>
-                        <a class="dropdown-item" href="{% url "profile_lists" user_name=user.username %}">
-                            <span class="icon icon-report"></span>
-                            Report
-                        </a>
                     </div>
                 </div>
-            </div>
-
-            {% if current_user != target_user and user.is_authenticated %}
                 <div class="item right">
                     <button id="follow-{{ target_user.user.username }}"
                             class="button {% if is_following %}follow-button-true{% else %}follow-button-false{% endif %}"
-                            onclick="onFollowButton('{{ target_user.user.username }}')"></button>
+                            onclick="onFollowButton('{{ target_user.user.username }}')">
+                    </button>
                 </div>
             {% elif not user.is_authenticated %}
                 <div class="item right">
