Closes view-post-modal when replying to a post

--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -153,10 +153,10 @@
 <!-- Universal view post modal -->
 <div class="modal fade" id="modal-viewpost" tabindex="-1" role="dialog" aria-labelledby="myModalLabel3" aria-hidden="true">
     <input type="hidden" id="modal-viewpost-username">
-    <div class="modal-dialog " role="document">
+    <div class="modal-dialog" role="document">
         <input id="modal-viewpost-postid" type="hidden" />
         <div class="b-post rounded-top">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <button id="view-post-close" type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
             <a id="modal-viewpost-postuser-link" href="#">
