--- a/static/templates/500.html
+++ b/static/templates/500.html
@@ -7,5 +7,5 @@
 {% endblock %}
 
 {% block content %}
-    <h1>An unexpected error occurred.</h1>
+    <h1>An internal server error occurred.</h1>
 {% endblock %}
