--- a/static/templates/card-profile-small.html
+++ b/static/templates/card-profile-small.html
@@ -17,7 +17,7 @@
                         <span class="icon icon-settings"></span>
                     </button>
                     <div class="dropdown-menu dropdown-menu-right fade-in">
-                        <a class="dropdown-item" onclick="block({{ target_user.username }})">
+                        <a class="dropdown-item" onclick="onBlockButton({{ target_user.username }})">
                             <span class="icon icon-block"></span>
                             Block
                         </a>
