--- a/static/templates/profile-base.html
+++ b/static/templates/profile-base.html
@@ -20,11 +20,11 @@
                             <span class="icon icon-settings"></span>
                         </button>
                         <div class="dropdown-menu dropdown-menu-right fade-in">
-                            <a class="dropdown-item" onclick="block('{{ target_user.user_name }}')">
+                            <a class="dropdown-item" onclick="onBlockButton('{{ target_user.user_name }}')">
                                 <span class="icon icon-block"></span>
                                 Block
                             </a>
-                            <a class="dropdown-item" onclick="report('{{ target_user.user_name }}')">
+                            <a class="dropdown-item" onclick="onReportUserButton('{{ target_user.user_name }}')">
                                 <span class="icon icon-report"></span>
                                 Report
                             </a>
