--- a/static/scss/_profile-full.scss
+++ b/static/scss/_profile-full.scss
@@ -1,15 +1,16 @@
 .b-profile-header {
     .banner {
-        display: flex;
-        align-items: center;
+        overflow: hidden;
         width: 100vw;
         height: 60vh;
-        overflow: hidden;
         margin-top: -3.5rem;
-
         .image {
-            width: 100%;
-            height: auto;
+            width: 100vw;
+            height: 100%;
+            background-size: cover;
+            background-position: center 50%;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
         }
     }
 
