Fixes post loading and writing

--- a/static/templates/card-trends.html
+++ b/static/templates/card-trends.html
@@ -2,7 +2,7 @@
 
 <div id="trends" class="b-trends">
     <h3 class="header">Trends</h3>
-    {% for trend in trends %}
-        <a class="body" href="{% url "tag_feed" tag=trend.tag %}">{{ trend.tag }}</a><br>
-    {% endfor %}
+    <div id="trend-tags">
+
+    </div>
 </div>
