--- a/static/scss/gabr.scss
+++ b/static/scss/gabr.scss
@@ -5,6 +5,7 @@ $col-border: #e1e8ed;
 $col-text-pri: #373a3c;
 $col-text-sec: #8899a6;
 $col-text-error: #7c2527;
+$col-not-focused: #f5f8fa;
 
 $font-light: 100;
 $font-regular: 400;
