--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -156,16 +156,23 @@
     <input type="hidden" id="modal-viewpost-username">
     <input id="modal-viewpost-postid" type="hidden" />
     <div class="modal-dialog" role="document">
-        <div class="b-post rounded-top" style="height: 2rem;">
-            <!--<button id="view-post-close" type="button" class="close" data-dismiss="modal">
-                <span>&times;</span>
-            </button>-->
-        </div>
+        <div class="modal-viewpost-spacer rounded-top "> </div>
         <div id="modal-viewpost-parent"> </div>
+        <div id="modal-viewpost-parent-spacer" class="modal-viewpost-spacer"> </div>
         <div id="modal-viewpost-main"> </div>
-        <div id="modal-viewpost-replies"> </div>
-        <div class="b-post rounded-bottom" style="height: 2rem;">
+        <div id="modal-viewpost-replybox">
+            <form id="viewpost-reply-form" action="{% url "form-new-post" %}" method="post">{% csrf_token %}
+                <div class="image-container">
+                    <img class="image" src="{{ current_user.avatar.url }}" />
+                </div>
+                <textarea class="form-control" rows="1" cols="75" name="body" maxlength="140"></textarea>
+                <input id="id_parent" name="parent" type="hidden" value="">
+                <input id="id_target" name="target" type="hidden">
+                <button type="submit" class="button">Reply</button>
+            </form>
         </div>
+        <div id="modal-viewpost-replies"> </div>
+        <div class="modal-viewpost-spacer rounded-bottom"> </div>
     </div>
 </div>
 
